# src/docs/swagger_output.json
@@ -460,7 +460,7 @@
         }
       }
     },
-    "/api/v1/pdv/{macAddress}": {
+    "/api/v1/pdv/mac-address/{macAddress}": {
       "get": {
         "description": "",
         "parameters": [
@@ -481,6 +481,24 @@
       }
     },
     "/api/v1/pdv/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
       "delete": {
         "description": "",
         "parameters": [
